<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="albumDetail"
            type="com.example.vinyls_jetpack_application.models.AlbumDetail" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/gray"
        android:foregroundGravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="20dp"
            android:paddingHorizontal="5dp"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cardCornerRadius="40dp"
                tools:ignore="MissingConstraints"
                android:layout_gravity="center_vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rotationX="0"
                    tools:srcCompat="@tools:sample/avatars"
                    app:imageUrl="@{albumDetail.cover}"
                    android:contentDescription="@string/album_cover_placeholder"/>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/albumItemName"
                android:text="@{albumDetail.name}"
                android:layout_gravity="center_vertical"
                android:textSize="20sp"
                android:layout_margin="15dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            </TextView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/commentImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:cardCornerRadius="50dp"
                app:cardBackgroundColor="#FFFFFF"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/commentIcon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/comment"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/add_comment"
                    />
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:shadowColor="@color/black"
                android:background="@color/white">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/title_detail_album"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/date_album"
                        android:textColor="#CC000000"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{albumDetail.releaseDate}"
                        android:textColor="#B3000000"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/genre"
                        android:textColor="#CC000000"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{albumDetail.genre}"
                        android:textColor="#B3000000"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/record_label"
                        android:textColor="#CC000000"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{albumDetail.recordLabel}"
                        android:textColor="#B3000000"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/description"
                        android:textColor="#CC000000"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{albumDetail.description}"
                        android:textColor="#B3000000"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="5dp"
                app:cardCornerRadius="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:text="@string/tracks"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_margin="15dp"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/tracksList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:listitem="@layout/album_detail_track_item"
                        ></androidx.recyclerview.widget.RecyclerView>
                </LinearLayout>
                </androidx.cardview.widget.CardView>


    </LinearLayout>
</layout>
