...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/albumCoverImageView"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:clickable="true"
                    app:imageUrl="@{album.cover}"
                    android:contentDescription="Imgen propia"
                    android:focusable="true" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{album.name}"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="#000000"
...
