<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="album" type="com.example.vinyls_jetpack_application.models.Album"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Search by album name"
            android:layout_marginTop="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints=""
            android:inputType="text" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Álbumes populares"
            android:textSize="38sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/searchEditText"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/albumCarouselRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/titleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addAlbumFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_add_24"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:backgroundTint="#FF9800"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>